# patcho

./: Cargo.toml  README.md  clippy.toml  justfile
src/: diagnostic.rs  error.rs  file_patch.rs  hunk.rs  hunk_line.rs  lib.rs  line_range.rs  parser.rs  unified_diff.rs
tests/: integration.rs
