[package]
name = "patcho"
version = "0.1.0"
edition = "2024"

[lints.rust]
unreachable_pub = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
wildcard_imports = "allow"

[dependencies]
chumsky = "0.13.0"
typed-builder = "0.23.2"

[dev-dependencies]
indoc = "2.0.7"
pretty_assertions = "1.4.1"
